--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
     package="com.google.android.gms.location.sample.basiclocationsample" >
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@mipmap/fuel_miser"
+        android:label="Fuel Miser"
         android:theme="@style/AppTheme" >
         <meta-data
             android:name="com.google.android.gms.version"
@@ -27,7 +27,7 @@
 
         <activity
             android:name=".Activity.MapsActivity"
-            android:label="@string/title_activity_maps" >
+            android:label="Fuel Miser" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
